# patito-playground

./: .gitignore  README.md  pyproject.toml
src/patito/: simple_example.py
src/patito_playground/: basket.parquet  connected.py  products.py
