[project]
name = "patito"
version = "0.1.0"
description = "Introduction to the Patito library (combining Pydantic and Polars)"
authors = [
    {name = "Louis Maddox", email = "louismmx@gmail.com"},
]
dependencies = [
    "patito>=0.6.1",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
